# koopman_autoencoders

./: .gitignore  pyproject.toml
src/: utils.py
src/models/: __init__.py  nice.py
src/models/kae/: aug_invert.py  base.py  common.py  consistent.py  dynamic.py  operators.py  reencoding.py  utils.py  vanilla.py
src/systems/: integrator.py  lorenz.py
tests/: test_operator.py
training/: train.py
